<?xml version="1.0" encoding="utf-8"?>

<resources>
   

    <string name="app_name">SurfLive</string>
    <string name="description_logo">Demo</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_feature1">Feature 1</string>
    <string name="description_feature2">Feature 2</string>
    <string name="description_feature3">Feature 3</string>
    <string name="description_feature4">Feature 4</string>
    

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_search1">Graphics</string>
    <string name="title_feature1">Capture and Upload</string>
    <string name="title_feature2">View Image</string>
    <string name="title_feature3">Upload Video</string>
    <string name="title_feature4">View Video</string>
    <string name="hello">hello</string>
    

    <string name="feature1_intro">A camera button and a button to choose an image from device goes here.</string>
    <string name="feature2_intro">A form asking for event and location.</string>
    <string name="feature3_intro">A camera button and a button to choose a video from device goes here.</string>
    <string name="feature4_intro">A form asking for event and location.</string>
    

    <string name="about_intro">This is a real life event based app which can do wonders!</string>
    <string name="search_intro">Search for an event at a location.</string>


</resources>
