<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/db1_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/TitleBar" >

        <ImageView
            style="@style/TitleBarLogo"
            android:contentDescription="@string/description_logo"
            android:src="@drawable/title_logo" />

        <ImageView style="@style/TitleBarSeparator" />

        <TextView style="@style/TitleBarText" />

        <ImageButton
            style="@style/TitleBarAction"
            android:contentDescription="@string/description_about"
            android:onClick="onClickAbout"
            android:src="@drawable/title_about" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="6dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal" >
            
            <EditText
                android:id="@+id/search_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/leftroundborder"
                android:hint="Search for an Address or Zip"
                android:padding="8dp"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/search_button"
                android:layout_width="40dp"
                android:layout_height="41dp"
                android:layout_marginLeft="-1dp"
                android:background="@drawable/rightroundborder"
                android:padding="5dp"
                android:src="@android:drawable/ic_menu_search"
                android:onClick="onHomeClickSearch"
                android:imeOptions="actionSearch"
                android:contentDescription="@string/description_search"
           />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp" >

            <Button
                android:id="@+id/home_btn_feature1"
                style="@style/HomeButton"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:drawableTop="@drawable/home_button1"
                android:onClick="onClickFeature"
                android:text="@string/title_feature1" />      
           

        </RelativeLayout>
        
        
    </LinearLayout>

</LinearLayout>
